# cosmic-media-now-playing-applet

./: Cargo.toml  README.md  install.sh  justfile  scratch.rs
.github/workflows/: rust.yml
i18n/de/: cosmic_media_now_playing_applet.ftl
i18n/en/: cosmic_media_now_playing_applet.ftl
i18n/es/: cosmic_media_now_playing_applet.ftl
i18n/fr/: cosmic_media_now_playing_applet.ftl
i18n/it/: cosmic_media_now_playing_applet.ftl
i18n/ja/: cosmic_media_now_playing_applet.ftl
i18n/nl/: cosmic_media_now_playing_applet.ftl
i18n/pl/: cosmic_media_now_playing_applet.ftl
i18n/pt-BR/: cosmic_media_now_playing_applet.ftl
i18n/ru/: cosmic_media_now_playing_applet.ftl
i18n/zh-CN/: cosmic_media_now_playing_applet.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  i18n.rs  main.rs  mpris.rs
