[package]
name = "cosmic-media-now-playing-applet"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A COSMIC DE panel applet that displays the currently playing media track using MPRIS"
repository = "https://github.com/user/cosmic-media-now-playing-applet"

[dependencies]
futures-util = "0.3"
i18n-embed-fl = "0.10"
rust-embed = "8"
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
reqwest = "0.13.2"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]
